# protobuf_example

./: CMakeLists.txt  README.md  main.cpp  main.py
protos/: protobuf.proto  protobuf_pb2.py
